# hr_ai_filter

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements-frontend.txt  requirements.txt
.github/workflows/: ci.yml
app/data/results/cv_json/: cv_developer.json  cv_junior_chef.json  cv_qa.json
data/results/cv_json/: 13fc07a9-6125-45f9-843a-17d139da28d5.json  50f7c16b-f7b3-4772-a139-02ad617fbe77.json  cv_developer.json  cv_junior_lawyer.json  f06a4973-5164-41f5-ae37-fba3b779d1b5.json
data/results/cv_txt/: cv_junior_chef.txt  cv_junior_lawyer.txt  f06a4973-5164-41f5-ae37-fba3b779d1b5.txt
data/results/json/: cv_developer.json  cv_qa.json
data/results/text/: cv_qa.txt
hr_ai_filter/: __init__.py  docker-compose.yml
hr_ai_filter/backend/: requirements.txt
hr_ai_filter/backend/app/: main.py
hr_ai_filter/backend/app/Trash/: cv_nousar.py  cv_router_old.py  cv_service_old.py  embe_service_notuse.py  extract_service_notuse.py  job_router_old.py  job_service_old.py  llm_nousar.py  llm_service_old.py  main_old.py  pdf_service_notuse.py  pdf_utils_old.py  text_service_notuse.py
hr_ai_filter/backend/app/graphs/: cv_analysis_graph.py
hr_ai_filter/backend/app/llm_providers/: __init__.py  base.py  gemini_provider.py  ollama_provider.py
hr_ai_filter/backend/app/routers/: cv.py  cv_router.py  job_router.py  llm_router.py
hr_ai_filter/backend/tests/: conftest.py
hr_ai_filter/frontend/: app.py  app_old.py
notebooks/: test_env.py
scripts/: init-db.sql
(+30 files in other folders)
