[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hr_ai_filter"
version = "0.0.1"
description = "AI-powered CV filtering system using LLMs, embeddings, RAG and MLOps."
authors = [
  { name = "team uni" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["hr_ai_filter"]
include = ["pyproject.toml", "hr_ai_filter/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["hr_ai_filter"]
force-sort-within-sections = true

